--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -25,6 +25,8 @@
             <a href="{% url 'login' %}">Log In</a>
         </div>
         {% endif %}
+        <a href="{% url 'datamaps:datamap_list' %}">Datamaps</a>
+        <a href="{% url 'register:project_list' %}">Projects</a>
     </nav>
 
     <div class="content-wrapper">
