--- a/dbasik/datamap/templates/datamap/datamap_list.html
+++ b/dbasik/datamap/templates/datamap/datamap_list.html
@@ -5,11 +5,16 @@
 {% block content %}
 
 <div class="left-panel">
-    <h2>Datamaps</h2>
+    <div class="data-table-heading">
+        <div id="data-table-heading-title">Datamaps</div>
+    </div>
     <p>{% lorem %}</p>
 </div>
 <div class="right-panel">
-    <table>
+    <div class="data-table-heading">
+        <div id="data-table-heading-title">Datamap list</div>
+    </div>
+    <table class="data-table">
         <thead>
             <tr>
                 <th scope="col">Datamap name</th>
