wip: getting celery process working again

--- a/dbasik/core/templates/core/base.html
+++ b/dbasik/core/templates/core/base.html
@@ -27,6 +27,7 @@
         {% endif %}
         <a href="{% url 'datamaps:datamap_list' %}">Datamaps</a>
         <a href="{% url 'register:project_list' %}">Projects</a>
+        <a href="{% url 'returns:returns_list' %}">Returns</a>
     </nav>
 
     <div class="content-wrapper">
