--- a/dbasik/returns/templates/returns/returnitem_list.html
+++ b/dbasik/returns/templates/returns/returnitem_list.html
@@ -32,7 +32,7 @@
             {% endif %}
         </table>
         <div>
-            <a>Upload a populated template</a>
+            <a href={% url 'returns:return_batch_create' %}>Upload a populated template</a>
         </div>
     </div>
 
